--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -19,6 +19,10 @@
   margin-bottom: 1rem;
 }
 
+.subtitle {
+  text-align: center;
+}
+
 .description {
   font-size: 1.25rem;
   margin-bottom: 2rem;
